Bug 1257825: Remove checks for paper height and width <= 0 in nsPrintSettings. r=dvander, a=ritu

Also added the check for invalid width / height into nsDeviceContextSpecProxy that was added into nsDeviceContextSpecWin.